# colossus-compute

./: Cargo.toml
demo/: Cargo.toml
demo/examples/: scale.rs
demo/jobs/: scale.wat
demo/src/: lib.rs
manager-server/: Cargo.toml
manager-server/src/: http.rs  io_stream.rs  main.rs  rt.rs  worker_manager.rs
proto/: Cargo.toml
proto/src/: alloc.rs  buf_stream.rs  lib.rs  limited_slice.rs
wasm-bridge/src/: lib.rs
worker/: Cargo.toml  build.rs
worker-bin/: Cargo.toml
worker-bin/src/: main.rs
worker/src/: alloc.rs  lib.rs  main.rs
worker/src/request_solver/: buffer.rs  cached_wasm.rs  mod.rs
