[package]
name = "manager-server"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { version = "*", path = "../proto" }
worker = { version = "*", path = "../worker" }
clap = { version = "4.5.53", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
rand = "0.9.2"
actix-web = "4.12.1"
ouroboros = "0.18.5"
parking_lot = "0.12.5"