[package]
name = "manager-server"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { version = "*", path = "../proto" }
worker = { version = "*", path = "../worker" }
clap = { version = "4.5.53", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "sync", "net"] }
pin-project-lite = "0.2.16"
tokio-util = { version = "0.7.17", features = ["io", "io-util"] }
serde = { version = "1.0.228", features = ["derive"] }
futures-lite = "2.6.1"
serde_json = "1.0.148"
flume = "0.12.0"
rand = "0.9.2"
actix-web = "4.12.1"
ouroboros = "0.18.5"
parking_lot = "0.12.5"