[package]
name = "worker"
version = "0.1.0"
edition = "2024"

[dependencies]
proto = { version = "*", path = "../proto" }
bytemuck = { version = "1.24", features = ["zeroable_atomics"] }
rayon = "1.11.0"
wasmtime = "40"
anyhow = { workspace = true }
flate2 = "1"
parking_lot = "0.12.5"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
flate2 = "1"

[dev-dependencies]
rand = "0.9.2"